# AsicOS

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: build-release.yml
components/asic_driver/: CMakeLists.txt  asic.c  asic_packet.c  bm1370.c
components/asic_driver/include/: asic.h  asic_packet.h  asic_result.h  bm1370.h
components/auto_tuner/: CMakeLists.txt  auto_tuner.c
components/auto_tuner/include/: auto_tuner.h
components/display/: CMakeLists.txt  display.c  display_screens.c
components/display/include/: display.h  display_screens.h  font_8x16.h
components/mining/: CMakeLists.txt  mining.c  sha256.c
components/mining/include/: mining.h  sha256.h
components/nvs_config/: CMakeLists.txt  nvs_config.c
components/nvs_config/include/: nvs_config.h
components/power/: CMakeLists.txt  adc_monitor.c  emc2101.c  fan_controller.c  i2c_mux.c  ina260.c  led_status.c  pid.c  plug_sense.c  temp_sensor.c  voltage_regulator.c
components/power/include/: adc_monitor.h  emc2101.h  fan_controller.h  i2c_mux.h  ina260.h  led_status.h  pid.h  plug_sense.h  temp_sensor.h  voltage_regulator.h
components/remote_access/: CMakeLists.txt  licence.c  remote_access.c
components/remote_access/include/: licence.h  remote_access.h
components/self_test/: CMakeLists.txt  self_test.c
components/self_test/include/: self_test.h
components/serial/: CMakeLists.txt  serial.c
components/stratum/: CMakeLists.txt  stratum_api.c  stratum_client.c  stratum_job.c  stratum_transport.c
docs/: code-review.md  index.html  nerdqaxe-compatibility.md
docs/manifests/: asicos-v1.json  bitforge-nano.json  nerdqaxepp.json
main/: CMakeLists.txt  Kconfig.projbuild  board.h  display_screens.c  main.c
main/boards/: asicos_v1.c  bitforge_nano.c  nerdqaxepp.c
main/http_server/: api_history.c  api_history.h  api_metrics.c  api_metrics.h  api_mining.c  api_mining.h  api_remote.c  api_remote.h  api_system.c  api_system.h  api_tuner.c  api_tuner.h  http_server.c  http_server.h  ws_handler.c  ws_handler.h
main/tasks/: display_task.h  hashrate_task.c  hashrate_task.h  loki_task.c  loki_task.h  mining_task.c  mining_task.h  power_task.c  power_task.h  remote_task.c  remote_task.h  result_task.c  result_task.h  tuner_task.c  tuner_task.h  wifi_task.c  wifi_task.h
test/: Makefile  test_crc.c  test_diff_zero_bug.c  test_difficulty_edge.c  test_hashrate_calc.c  test_hashrate_hw.c  test_mining.c  test_nonce_verify.c  test_pid.c  test_stratum.c
ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: App.vue  router.ts  style.css
ui/src/components/: AsicGrid.vue  (+14 more)
(+18 files in other folders)
